Tried to fix footer height when site is viewed on small screens, to be tested

--- a/css/redesign2015.css
+++ b/css/redesign2015.css
@@ -136,7 +136,17 @@ li.ecplus-username {
 
     footer {
         position: relative !important;
-        height: auto !important;
+        /*height: auto !important;*/
+    }
+    footer section {
+        margin: 30px 0;
+    }
+    .row.footer-height {
+        text-align: center
+    }
+    /* Check this for footer height when the site is viewed on small screens*/
+    body {
+        margin-bottom:0!important;
     }
 }
 
@@ -197,6 +207,9 @@ i.project-icon {
 
 .ecplus-app-store-badge img {
 
+}
+.ecplus-play-store-badge {
+    margin-left: 7px;
 }
 
 .project-list-item {
